syntax = "proto3";

package err_code;

option go_package = "github.com/UnicomAI/wanwu/api/proto/err-code";

message Status {
    string textKey = 1;
    repeated string args = 2;
}